(Bug Fix) Bug: org.gwt.mosaic.showcase.client.content.widgets.CwCustomButton.onClick(ClickEvent) invokes inefficient Boolean constructor; use Boolean.valueOf(...) instead